--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -41,7 +41,7 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    @*<li><a href="#">Last Year <span class="pull-right badge bg-blue">@Model.EnqCountModels.OLastYear</span></a></li>*@
+                                    <li><a href="#">Last Year <span class="pull-right badge bg-blue">@Model.EnqCountModels.OLastYear</span></a></li>
                                     <li><a href="#">Last Month <span class="pull-right badge bg-blue">@Model.EnqCountModels.OLastMonth</span></a></li>
                                     @* <li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.EnqCountModels.OLast7Days</span></a></li>*@
                                     <li><a href="#">Yesterday <span class="pull-right badge bg-blue">@Model.EnqCountModels.OYesterday</span></a></li>
@@ -61,7 +61,7 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    @*<li><a href="#">Last Year <span class="pull-right badge bg-blue">@Model.EnqCountModels.PLastYear</span></a></li>*@
+                                    <li><a href="#">Last Year <span class="pull-right badge bg-blue">@Model.EnqCountModels.PLastYear</span></a></li>
                                     <li><a href="#">Last Month <span class="pull-right badge bg-blue">@Model.EnqCountModels.PLastMonth</span></a></li>
                                     @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.EnqCountModels.PLast7Days</span></a></li>*@
                                     <li><a href="#">Yesterday <span class="pull-right badge bg-blue">@Model.EnqCountModels.PYesterday</span></a></li>
@@ -81,7 +81,7 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    @*<li><a href="#">Last Year <span class="badge bg-blue">@Model.POCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.POCountModels.OLastYearValue</span></a></li>*@
+                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.POCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.POCountModels.OLastYearValue</span></a></li>
                                     <li><a href="#">Last Month <span class="badge bg-blue">@Model.POCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.POCountModels.OLastMonthValue</span></a></li>
                                     @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
                                     <li><a href="#">Yesterday <span class="badge bg-blue">@Model.POCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.POCountModels.OYesterdayValue</span></a></li>
@@ -101,7 +101,7 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    @*<li><a href="#">Last Year <span class="badge bg-blue">@Model.QuotCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastYearValue</span></a></li>*@
+                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.QuotCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastYearValue</span></a></li>
                                     <li><a href="#">Last Month <span class="badge bg-blue">@Model.QuotCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastMonthValue</span></a></li>
                                     @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
                                     <li><a href="#">Yesterday <span class="badge bg-blue">@Model.QuotCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OYesterdayValue</span></a></li>
