--- a/Views/Admin/POReport.cshtml
+++ b/Views/Admin/POReport.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Vendor_Indusuno.Extensions
-@model Vendor_Indusuno.ViewModels.EnquiryReportViewModel
+@model Vendor_Indusuno.ViewModels.POReportViewModel
 @{
-    ViewBag.Title = "Enquiry Report";
+    ViewBag.Title = "Purchase Orders Report";
     TempData["Reports"] = "active";
-    TempData["EnquiryReport"] = "active";
+    TempData["POReports"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -24,7 +24,7 @@
 </section>
 <!-- Main content -->
 <section class="content">
-    @using (Html.BeginForm("EnquiryReport", "Admin", FormMethod.Post, new { id = "form_advanced_validation", autocomplete = "off", enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("POReport", "Admin", FormMethod.Post, new { id = "form_advanced_validation", autocomplete = "off", enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
         <!-- Main row -->
@@ -68,12 +68,12 @@
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="form-group">
-                                @Html.LabelFor(m => m.EnquiryModels.QuotePrice, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.TextBoxFor(m => m.EnquiryModels.QuotePrice,
+                                @Html.LabelFor(m => m.PurchaseOrdersModels.TotalPrice, new { @class = "form-control-label" }) <sup>*</sup>
+                                @Html.TextBoxFor(m => m.PurchaseOrdersModels.TotalPrice,
                                 new
                                 {
                                     @class = "form-control",
-                                    placeholder = @Html.DisplayNameFor(m => m.EnquiryModels.QuotePrice)
+                                    placeholder = @Html.DisplayNameFor(m => m.PurchaseOrdersModels.TotalPrice)
                                 })
                             </div>
                         </div>
@@ -95,7 +95,7 @@
                         new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                        @*<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(m => m.EnquiryType, new { @class = "form-control-label" })
                                 @Html.DropDownListFor(m => m.EnquiryType,
@@ -107,16 +107,17 @@
                                 "--Select Enquiry Type--", new { @class = "form-control select2" })
                                 @Html.ValidationMessageFor(m => m.EnquiryType, "", new { @class = "text-danger errpotype" })
                             </div>
-                        </div>
+                        </div>*@
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 p-l-0">
                                 <div class="form-group">
-                                    @Html.LabelFor(m => m.EnquiryModels.QuotePrice, new { @class = "form-control-label" }) <sup>*</sup>
-                                    @Html.TextBoxFor(m => m.EnquiryModels.QuotePrice,
+                                    PurchaseOrdersModels.TotalPrice
+                                    @Html.LabelFor(m => m.PurchaseOrdersModels.TotalPrice, new { @class = "form-control-label" }) <sup>*</sup>
+                                    @Html.TextBoxFor(m => m.PurchaseOrdersModels.TotalPrice,
                                     new
                                     {
                                         @class = "form-control",
-                                        placeholder = @Html.DisplayNameFor(m => m.EnquiryModels.QuotePrice)
+                                        placeholder = @Html.DisplayNameFor(m => m.PurchaseOrdersModels.TotalPrice)
                                     })
                                 </div>
                             </div>
@@ -130,37 +131,84 @@
                             </div>
                         </div>
                     </div>
-
                     <!-- /.box-body -->
                     <div class="box-body">
-                        <table id="tblEnquiry" class="table table-bordered display">
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Search, new { @class = "form-control-label" }) <sup>*</sup>
+                                @Html.TextBoxFor(m => m.Search,
+                                new
+                                {
+                                    @class = "form-control text-capitalize",
+                                    placeholder = @Html.DisplayNameFor(m => m.Search)
+                                })
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.StartDate, new { @class = "form-control-label" }) <sup>*</sup>
+                                @Html.TextBoxFor(m => m.StartDate,
+                                new
+                                {
+                                    @class = "form-control datepicker",
+                                    placeholder = @Html.DisplayNameFor(m => m.StartDate)
+                                })
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.EndDate, new { @class = "form-control-label" }) <sup>*</sup>
+                                @Html.TextBoxFor(m => m.EndDate,
+                                new
+                                {
+                                    @class = "form-control datepicker",
+                                    placeholder = @Html.DisplayNameFor(m => m.EndDate)
+                                })
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="box-tools pull-left">
+                                <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
+                                        value="search">
+                                    SEARCH
+                                </button>
+                            </div>
+                        </div>
+
+                        <table id="tblpurchaseorder" class="table table-bordered display">
                             <thead>
                                 <tr>
                                     <th>SNo</th>
-                                    <th hidden></th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().CustomerName)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().EnqId)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().EnqPId)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().Product)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().Brand)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().ModelNo)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().Quantity)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().Price)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().TotalPrice)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().EnquiryDate)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().EndDate)</th>
-                                    <th>@Html.DisplayNameFor(model => model.EnquiriesModelList.FirstOrDefault().CurrentStage)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POId)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POPId)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Product)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Brand)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().ModelNo)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Quantity)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Price)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Discount)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().TotalPrice)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().GST)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().ExpDlvDate)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CurrentStage)</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in Model.EnquiriesModelList)
+                                @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
                                     <tr>
                                         <td></td>
-                                        <td hidden></td>
                                         <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.EnqId)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.EnqPId)</td>
+                                        <td>
+                                            <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
+                                        </td>
+                                        <td>
+                                            <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.POId</a>
+                                        </td>
+                                        <td>@Html.DisplayFor(modelItem => item.POPId)</td>
                                         <td title="@item.SpcRemark">
                                             @Html.DisplayFor(modelItem => item.Product)<br>
                                         </td>
@@ -168,17 +216,19 @@
                                         <td>@Html.DisplayFor(modelItem => item.ModelNo)</td>
                                         <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
                                         <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Discount)</td>
                                         <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.EnquiryDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.EndDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.GST)%</td>
+                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.ExpDlvDate)</td>
                                         <td>@Html.DisplayFor(modelItem => item.CurrentStage)</td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
                     </div>
+                    <!-- /.box -->
                 </div>
-                <!-- /.box -->
             </div>
         </div>
         <!-- danger with sound -->
