Enquiry Report and PO Report Done

--- a/Views/Admin/EnquiryRegret.cshtml
+++ b/Views/Admin/EnquiryRegret.cshtml
@@ -2,7 +2,7 @@
 @model Vendor_Indusuno.ViewModels.EnquiryRegretViewModel
 @{
     ViewBag.Title = "Sourced";
-    TempData["Enquiry"] = "active";
+    TempData["Reposts"] = "active";
     TempData["EnquiryRegret"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
