--- a/Views/Admin/POReport.cshtml
+++ b/Views/Admin/POReport.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Vendor_Indusuno.Extensions
 @model Vendor_Indusuno.ViewModels.POReportViewModel
 @{
-    ViewBag.Title = "Purchase Orders Report";
+    ViewBag.Title = "Purchase Order Report";
     TempData["Reports"] = "active";
-    TempData["POReports"] = "active";
+    TempData["POReport"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -33,147 +33,83 @@
                 <!-- Default box -->
                 <div class="box">
                     <div class="box-header with-border">
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Search, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.TextBoxFor(m => m.Search,
-                                new
-                                {
-                                    @class = "form-control text-capitalize",
-                                    placeholder = @Html.DisplayNameFor(m => m.Search)
-                                })
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.StartDate, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.TextBoxFor(m => m.StartDate,
-                                new
-                                {
-                                    @class = "form-control datepicker",
-                                    placeholder = @Html.DisplayNameFor(m => m.StartDate)
-                                })
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.EndDate, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.TextBoxFor(m => m.EndDate,
-                                new
-                                {
-                                    @class = "form-control datepicker",
-                                    placeholder = @Html.DisplayNameFor(m => m.EndDate)
-                                })
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.PurchaseOrdersModels.TotalPrice, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.TextBoxFor(m => m.PurchaseOrdersModels.TotalPrice,
-                                new
-                                {
-                                    @class = "form-control",
-                                    placeholder = @Html.DisplayNameFor(m => m.PurchaseOrdersModels.TotalPrice)
-                                })
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Customer, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.DropDownListFor(m => m.Customer, new SelectList(Model.CustomerModelList, "Key", "Value"),
-                                "--Select Customer--", new { @class = "form-control select2 cstid" })
-                                @Html.ValidationMessageFor(m => m.Customer, "",
-                        new { @class = "text-danger errcstid" })
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.User, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.DropDownListFor(m => m.User, new SelectList(Model.UserModelList, "Key", "Value"),
-                                "--Select User--", new { @class = "form-control select2 posentby" })
-                                @Html.ValidationMessageFor(m => m.User, "",
-                        new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        @*<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.EnquiryType, new { @class = "form-control-label" })
-                                @Html.DropDownListFor(m => m.EnquiryType,
-                               new List<SelectListItem>
-                                  {
-                                    new SelectListItem{ Text="PENDING", Value = "PENDING", Selected = true },
-                                    new SelectListItem{ Text="QUOTED", Value = "AP" },
-                                  },
-                                "--Select Enquiry Type--", new { @class = "form-control select2" })
-                                @Html.ValidationMessageFor(m => m.EnquiryType, "", new { @class = "text-danger errpotype" })
-                            </div>
-                        </div>*@
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 p-l-0">
+                        <div class="col-md-12">
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                                 <div class="form-group">
-                                    @Html.LabelFor(m => m.PurchaseOrdersModels.TotalPrice, new { @class = "form-control-label" }) <sup>*</sup>
-                                    @Html.TextBoxFor(m => m.PurchaseOrdersModels.TotalPrice,
+                                    @Html.LabelFor(m => m.Search, new { @class = "form-control-label" }) <sup>*</sup>
+                                    @Html.TextBoxFor(m => m.Search,
                                     new
                                     {
-                                        @class = "form-control",
-                                        placeholder = @Html.DisplayNameFor(m => m.PurchaseOrdersModels.TotalPrice)
+                                        @class = "form-control text-capitalize",
+                                        placeholder = @Html.DisplayNameFor(m => m.Search)
                                     })
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                <div class="box-tools pull-left">
-                                    <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
-                                            value="search">
-                                        SEARCH
-                                    </button>
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.StartDate, new { @class = "form-control-label" }) <sup>*</sup>
+                                    @Html.TextBoxFor(m => m.StartDate,
+                                    new
+                                    {
+                                        @class = "form-control datepicker",
+                                        placeholder = @Html.DisplayNameFor(m => m.StartDate)
+                                    })
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.EndDate, new { @class = "form-control-label" }) <sup>*</sup>
+                                    @Html.TextBoxFor(m => m.EndDate,
+                                    new
+                                    {
+                                        @class = "form-control datepicker",
+                                        placeholder = @Html.DisplayNameFor(m => m.EndDate)
+                                    })
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <div class="box box-widget widget-user-2">
+                                    <div class="box-footer no-padding">
+                                        <ul class="nav nav-stacked">
+                                            <li><a href="#">Total Price <span class="pull-right badge bg-blue">@Model.PurchaseOrdersModels.TotalPrice</span></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.Customer, new { @class = "form-control-label" }) <sup>*</sup>
+                                    @Html.DropDownListFor(m => m.Customer, new SelectList(Model.CustomerModelList, "Key", "Value"),
+                                    "--Select Customer--", new { @class = "form-control select2 cstid" })
+                                    @Html.ValidationMessageFor(m => m.Customer, "",
+                            new { @class = "text-danger errcstid" })
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.User, new { @class = "form-control-label" }) <sup>*</sup>
+                                    @Html.DropDownListFor(m => m.User, new SelectList(Model.UserModelList, "Key", "Value"),
+                                    "--Select User--", new { @class = "form-control select2 posentby" })
+                                    @Html.ValidationMessageFor(m => m.User, "",
+                            new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                    <div class="box-tools pull-left">
+                                        <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
+                                                value="search">
+                                            SEARCH
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- /.box-body -->
                     <div class="box-body">
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Search, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.TextBoxFor(m => m.Search,
-                                new
-                                {
-                                    @class = "form-control text-capitalize",
-                                    placeholder = @Html.DisplayNameFor(m => m.Search)
-                                })
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.StartDate, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.TextBoxFor(m => m.StartDate,
-                                new
-                                {
-                                    @class = "form-control datepicker",
-                                    placeholder = @Html.DisplayNameFor(m => m.StartDate)
-                                })
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.EndDate, new { @class = "form-control-label" }) <sup>*</sup>
-                                @Html.TextBoxFor(m => m.EndDate,
-                                new
-                                {
-                                    @class = "form-control datepicker",
-                                    placeholder = @Html.DisplayNameFor(m => m.EndDate)
-                                })
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="box-tools pull-left">
-                                <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
-                                        value="search">
-                                    SEARCH
-                                </button>
-                            </div>
-                        </div>
-
                         <table id="tblpurchaseorder" class="table table-bordered display">
                             <thead>
                                 <tr>
