Quoted Vendor selection working and chart working fine and all pages

--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -271,6 +271,7 @@
     @Scripts.Render("~/bundles/OthersUIScripts")
     @Scripts.Render("~/bundles/DashboardScripts")
     @Scripts.Render("~/bundles/CustomScripts")
+    <script src="~/Content/custom/morris.js"></script>
     @*@RenderSection("scripts", required: false)*@
     <!-- End Script -->
     <script type="text/javascript">
